# wsl-manager-tui

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md
.claude/: settings.json
.claude/agents/: locale-independence-reviewer.md  reducer-purity-reviewer.md
.claude/skills/add-i18n-key/: SKILL.md
.claude/skills/add-wsl-op/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
bucket/: wslm.json
docs/: RELEASING.md
docs/launch/: launch-runbook.md
docs/superpowers/plans/: 2026-06-06-split-large-files.md  2026-06-07-managed-export-import-folder.md  2026-06-07-ui-visual-refresh.md  2026-06-07-vm-cpu-metric.md
docs/superpowers/specs/: 2026-06-06-refactor-split-large-files-design.md  2026-06-06-wsl-manager-tui-design.md  2026-06-07-managed-export-import-folder-design.md  2026-06-07-ui-visual-refresh-design.md  2026-06-07-vm-cpu-metric-design.md
packaging/scoop/: wslm.json
src/: error.rs  lib.rs  main.rs
src/app/: config_edit.rs  input.rs  message.rs  mod.rs  modal.rs  model.rs  update.rs
src/app/update/: mod.rs  modal.rs
src/config/: ini.rs  mod.rs
src/i18n/: mod.rs
src/manage/: mod.rs
src/metrics/: mod.rs
src/prefs/: mod.rs
src/registry/: mod.rs
src/runtime/: mod.rs  tui.rs
src/ui/: footer.rs  mod.rs  theme.rs  util.rs
src/wsl/: backend.rs  collect.rs  decode.rs  mod.rs  model.rs  parse.rs
tests/: real_wsl.rs
tests/fixtures/: .gitkeep
