[package]
name = "wsl-manager-tui"
version = "0.1.0"
edition = "2021"
rust-version = "1.96"
description = "A TUI manager for the Windows Subsystem for Linux (WSL)"
license = "MIT"
readme = "README.md"
keywords = ["wsl", "tui", "ratatui", "windows", "manager"]
categories = ["command-line-utilities"]

# Library crate (wsl_manager_tui) holds the pure logic; the thin `wslm` binary drives it.
[lib]
name = "wsl_manager_tui"
path = "src/lib.rs"

[[bin]]
name = "wslm"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
ratatui = "0.30.1"
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.39.3"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "process", "time", "sync", "io-std"] }
toml = "1.1.2"
tui-input = "0.15.3"
unicode-width = "0.2.2"
windows-registry = "0.6.1"
# Dependencies are added incrementally per milestone via `cargo add`.

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
# panic = unwind is kept (default): terminal restore is guaranteed by both a Drop
# guard on the Tui wrapper and a panic hook. We do not use panic = "abort".
