[package]
name = "wsl-manager-tui"
version = "1.0.0"
edition = "2021"
rust-version = "1.96"
description = "A TUI manager for the Windows Subsystem for Linux (WSL)"
homepage = "https://github.com/nakaba-lab/wsl-manager-tui"
repository = "https://github.com/nakaba-lab/wsl-manager-tui"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["wsl", "tui", "ratatui", "windows", "manager"]
categories = ["command-line-utilities"]
# Publish only what the crate needs — keep internal docs, .claude tooling, CI,
# packaging, and the Scoop bucket out of the crates.io tarball.
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "Cargo.lock",
    "README.md",
    "LICENSE-MIT",
    "LICENSE-APACHE",
]

# Library crate (wsl_manager_tui) holds the pure logic; the thin `wslm` binary drives it.
[lib]
name = "wsl_manager_tui"
path = "src/lib.rs"

[[bin]]
name = "wslm"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.89"
clap = { version = "4.6.1", features = ["derive"] }
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
ratatui = "0.30.1"
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.39.3"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "process", "time", "sync", "io-std", "io-util"] }
toml = "1.1.2"
unicode-width = "0.2.2"
windows-registry = "0.6.1"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_SystemInformation", "Win32_System_WindowsProgramming", "Wdk_System_SystemInformation"] }
# Dependencies are added incrementally per milestone via `cargo add`.

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
# panic = unwind is kept (default): terminal restore is guaranteed by both a Drop
# guard on the Tui wrapper and a panic hook. We do not use panic = "abort".
